--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ratatouille Portfolio</title>
+    <title>JamesCole Portfolio</title>
 
     <!--
     - favicon
@@ -55,7 +55,7 @@
           <div class="info-content">
             <h1 class="name" title="Richard hanrick">James Cole</h1>
 
-            <p class="title">I fell in love with WEB</p>
+            <p class="title">I fell in love with WEB and AI</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
